fixed some spacing

--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ body {
 
 .form-section .columns {
   display: flex;
-  /* justify-content: space-between; */
 }
 
 .col-1,
@@ -55,7 +54,7 @@ body {
 }
 
 .form-section {
-  padding: 2em 1em 0.8em;
+  padding: 2em 0.7em 0.8em 1em;
 }
 
 .bill-form ::placeholder {
@@ -98,6 +97,7 @@ input {
   font-size: 24px;
   margin: 0.5rem 0 1.5rem;
   max-width: 90%;
+  font-family: 'Space Mono', monospace;
 }
 
 input:hover,
@@ -106,9 +106,13 @@ input:focus {
 }
 
 #custom {
-  width: 100%;
+  width: 90%;
   font-weight: 700;
   color: hsl(186, 14%, 43%);
+  padding: 0.7rem 1.2rem;
+  width: 72%;
+  border-radius: 6px;
+  text-align: end;
 }
 
 .tip-btns {
@@ -172,6 +176,12 @@ input:focus {
   text-transform: uppercase;
   padding: 1rem;
   border-radius: 6px;
+  border: none;
+}
+
+.reset-btn:hover,
+.reset-btn:focus {
+  cursor: pointer;
 }
 
 .attribution {
